--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,6 +9,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
+	<script src="./js/index.js" defer></script>
+
 </head>
 <body>
 <header>
@@ -37,6 +39,7 @@
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
 		<div class="gallery">
+			<!--
 			<figure>
 				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
 				<figcaption>Abajour Tahina</figcaption>
@@ -81,6 +84,7 @@
 				<img src="assets/images/hotel-first-arte-new-delhi.png" alt="Hotel First Arte - New Delhi">
 				<figcaption>Hotel First Arte - New Delhi</figcaption>
 			</figure>
+			-->
 		</div>
 	</section>
 	<section id="contact">
