--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800" rel="stylesheet">
+
     
     <!-- Liens vers les styles et scripts -->
     <link rel="stylesheet" href="./assets/style.css">
@@ -21,22 +23,20 @@
 </head>
 
 <body>
-
-    <!-- Mode édition (visible uniquement si connecté) -->
-    <div id="editionMode" class="editionMode">
-        <i class="fa-regular fa-pen-to-square"></i>
-        <span>Mode édition</span>
-    </div>
-
     <!-- Header -->
     <header>
+		    <!-- Mode édition (visible uniquement si connecté) -->
+			<div id="editionMode" class="editionMode">
+				<i class="fa-regular fa-pen-to-square"></i>
+				<span>Mode édition</span>
+			</div>
         <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
         <nav>
             <ul>
-                <li>Projets</li>
-                <li>Contact</li>
+                <li>projets</li>
+                <li>contact</li>
                 <li><a href="#login" id="login-button">Login</a></li>
-                <li><i class="fa-brands fa-instagram" aria-hidden="true"></i></li>
+                <li class="instagram"> <i class="fa-brands fa-instagram" aria-hidden="true"></i></li>
             </ul>
         </nav>
     </header>
