--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -77,7 +77,7 @@
         <section class="buttonModife">
             <h2>Mes projets</h2>
             <button id="edit-button">
-                <i class="fa-solid fa-pen-to-square"></i> Modifier
+                <i class="fa-solid fa-pen-to-square"></i>modifier
             </button>
         </section>
 
@@ -158,7 +158,7 @@
     <footer>
         <nav>
             <ul>
-                <li class="navFooter">Mentions Légales</li>
+                <a class="navFooter">Mentions Légales</a>
             </ul>
         </nav>
     </footer>
