--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -73,7 +73,7 @@
         </section>
 
         <!-- Section Projets -->
-        <section class="buttonModife">
+        <section id="buttonModife">
             <h2>Mes projets</h2>
             <button id="edit-button">
                 <i class="fa-solid fa-pen-to-square"></i>modifier
