--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -140,7 +140,7 @@
 						</div>
 						<input type="file" id="photoInput" name="photo" accept="image/*" hidden required>
 						<!-- Image preview -->
-						<img id="photoPreview" src="#" alt="Aperçu de la photo" style="display: none;">
+						<img id="photoPreview" src="#" alt="Aperçu de la photo">
 					</div>					
 
                     <label for="titleInput">Titre</label>
