--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -32,8 +32,8 @@
         <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
         <nav>
             <ul>
-                <li>projets</li>
-                <li>contact</li>
+                <li><a href="#buttonModife">Projets</a></li>
+                <li><a href="#contact">Contact</a></li>
                 <li><a href="#login" id="login-button">Login</a></li>
                 <li class="instagram"> <i class="fa-brands fa-instagram" aria-hidden="true"></i></li>
             </ul>
