--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -32,7 +32,7 @@
         <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
         <nav>
             <ul>
-                <li><a href="#buttonModife">Projets</a></li>
+                <li><a href="#projet">Projets</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#login" id="login-button">Login</a></li>
                 <li class="instagram"> <i class="fa-brands fa-instagram" aria-hidden="true"></i></li>
@@ -79,7 +79,7 @@
         </section>
 
         <!-- Section Projets -->
-        <section id="buttonModife">
+        <section id="projet">
             <h2>Mes projets</h2>
             <button id="edit-button">
                 <i class="fa-solid fa-pen-to-square"></i>modifier
